--- a/app/src/main/res/layout/activity_lista__clientes.xml
+++ b/app/src/main/res/layout/activity_lista__clientes.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context=".activities.Formulario_verif"
+    tools:context=".activities.Formulario_Positiva"
     android:orientation="vertical">
 
     <android.support.design.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
