--- a/app/src/main/res/layout/activity_formulario_verif.xml
+++ b/app/src/main/res/layout/activity_formulario_verif.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.Formulario_verif"
+    tools:context=".activities.Formulario_Positiva"
     android:orientation="vertical">
 
     <android.support.design.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -33,7 +33,7 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".activities.Formulario_verif"
+            tools:context=".activities.Formulario_Positiva"
             android:orientation="vertical"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:layout_below="@+id/coordinator"
