--- a/app/src/main/res/layout/activity_formulario__visita.xml
+++ b/app/src/main/res/layout/activity_formulario__visita.xml
@@ -117,7 +117,8 @@
                             android:layout_width="200dp"
                             android:layout_height="wrap_content"
                             android:id="@+id/v_fecha"
-                            android:textSize="20dp" />
+                            android:textSize="20dp"
+                            android:text="No Indica" />
 
                         <Button
                             android:layout_width="wrap_content"
