--- a/app/src/main/res/layout/activity_mapa__detalles.xml
+++ b/app/src/main/res/layout/activity_mapa__detalles.xml
@@ -29,6 +29,15 @@
                 android:gravity="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="a "
+                android:id="@+id/falta"
+                android:textColor="@color/colorAccent"
+                android:gravity="center"
+                 />
+
             <!-- Card Perfil -->
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
@@ -189,13 +198,13 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <!-- Imagen del detalle -->
-            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:id="@+id/map"
-                android:name="com.google.android.gms.maps.SupportMapFragment"
-                android:layout_width="match_parent"
-                android:layout_height="400dp"
-                tools:context=".FirstMapActivity" />
+                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:id="@+id/map"
+                    android:name="com.google.android.gms.maps.SupportMapFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    tools:context=".FirstMapActivity" />
 
             <!-- Toolbar -->
             <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -208,6 +217,9 @@
                 app:theme="@style/CustomActionBar"
 
                 />
+
+                mdasdnma
+            
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
