--- a/app/src/main/res/layout/tarea_item.xml
+++ b/app/src/main/res/layout/tarea_item.xml
@@ -18,20 +18,22 @@
     android:padding="@dimen/dialog_body"  >
 
     <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:id="@+id/imageView2"
-        android:src="@drawable/ic_ind"
+        android:src="@drawable/tic_dom"
+        android:background="@color/colorGood"
         android:layout_marginRight="5dp"
-        android:paddingBottom="5dp"/>
+        android:layout_marginBottom="5dp"
+        android:scaleType="fitXY"
+        />
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="80dp"
+        android:layout_width="80dp"
+        android:layout_height="60dp"
         android:id="@+id/iv_vip"
         android:src="@drawable/vip"
         android:layout_marginRight="5dp"
-        android:paddingBottom="5dp"
         android:scaleType="fitXY"/>
 
     <TextView
@@ -132,5 +134,8 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
 </RelativeLayout>
+
+
 </android.support.v7.widget.CardView>
