--- a/app/src/main/res/menu/menu_formulario.xml
+++ b/app/src/main/res/menu/menu_formulario.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/action_enviar"
+   <!--<item
+        android:id="@+id/action_pdf"
         android:orderInCategory="100"
-        android:icon="@drawable/ic_done_white_24dp"
-        android:title="ENVIAR"
+        android:icon="@drawable/ic_picture_as_pdf_white_24dp"
+        android:title="PDF"
         app:showAsAction="ifRoom" />
+        -->
+   <item
+    android:id="@+id/action_enviar"
+    android:orderInCategory="100"
+    android:icon="@drawable/ic_done_white_24dp"
+    android:title="ENVIAR"
+    app:showAsAction="ifRoom" />
 </menu>
